--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "bot",
-  "version": "1.0.0",
-  "description": "",
+  "name": "vinted-discord-bot",
+  "version": "2.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "alexpgm",
-  "license": "ISC",
+  "author": "Androz2091 <androz2091@gmail.com>",
+  "license": "MIT",
   "dependencies": {
-    "discord.js": "^11.3.2"
+    "discord-sync-commands": "^0.3.0",
+    "discord.js": "^13.1.0",
+    "easy-json-database": "^1.3.0",
+    "vinted-api": "^2.4.0"
   }
 }
